# combi_ws

./: README.md
combi_description/: CMakeLists.txt  package.xml
combi_description/urdf/: combi.xacro  delto_gripper_3f.xacro  nova2_robot.xacro
combi_moveit/config/: combi.srdf  combi.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
combi_moveit/launch/: demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/share/combi_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/combi_description/cmake/: combi_descriptionConfig-version.cmake  combi_descriptionConfig.cmake
install/share/combi_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/combi_description/: CMakeLists.txt
src/combi_description/urdf/: combi.xacro  delto_gripper_3f.xacro  nova2_robot.xacro
src/combi_moveit/: CMakeLists.txt  package.xml
src/combi_moveit/config/: combi.ros2_control.xacro  combi.srdf  combi.xacro  initial_positions.yaml  kinematics.yaml  moveit.rviz  ros2_controllers.yaml
src/combi_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+46 files in other folders)
