<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combi_description</name>
  <version>0.1.0</version>
  <description>Combined description: Nova2 robot + Delto 3F gripper</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime deps (설명/시각화용) -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- (선택) Gazebo/ros2_control을 쓸 때만 추가 -->
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <!-- <exec_depend>ros2_control</exec_depend> -->
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <!-- <exec_depend>ros2_controllers</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
